# techlevel

./: README.md  agent.py  files.json  index.html  index_lag  main.py  pyproject.toml  tasks_7I3G21RyARs.json  tasks_9G5PtUwdFkY.json  tasks_CaYOwvF22Z4.json  tasks_FvziRqkLrEU.json  tasks_HjuHHI60s44.json  tasks_YPzFPoqwTmI.json  tasks_Z40N7b9NHTE.json  tasks_g59y0PV86_0.json  tasks_jrZR7GS5qMs.json  tasks_qVajpj_1eDQ.json  tasks_zZFf6_ji8Ms.json  yt.py
demo/: tasks_FvziRqkLrEU.json  tasks_HjuHHI60s44.json  tasks_Z40N7b9NHTE.json
transcripts/: 7I3G21RyARs.json  9G5PtUwdFkY.json  CaYOwvF22Z4.json  FvziRqkLrEU.json  HjuHHI60s44.json  YPzFPoqwTmI.json  Z40N7b9NHTE.json  g59y0PV86_0.json  jrZR7GS5qMs.json  qVajpj_1eDQ.json  zZFf6_ji8Ms.json
